@@ -4,8 +4,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
@@ -16,10 +19,12 @@ import org.opensaml.saml2.core.NameID;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.saml.SAMLCredential;
 
+import com.synopsys.integration.alert.common.enumeration.AuthenticationType;
 import com.synopsys.integration.alert.common.persistence.accessor.ConfigurationAccessor;
 import com.synopsys.integration.alert.common.persistence.accessor.UserAccessor;
 import com.synopsys.integration.alert.common.persistence.model.ConfigurationModel;
 import com.synopsys.integration.alert.common.persistence.model.UserModel;
+import com.synopsys.integration.alert.common.persistence.model.UserRoleModel;
 import com.synopsys.integration.alert.component.authentication.descriptor.AuthenticationDescriptorKey;
 import com.synopsys.integration.alert.web.security.authentication.UserManagementAuthoritiesPopulator;
 import com.synopsys.integration.alert.web.security.authentication.database.UserPrincipal;
@@ -29,17 +34,22 @@ public class UserDetailsServiceTest {
     private static final String USER_NAME = "user_name";
     private static final String EMAIL = "email_address";
     private static final String[] VALID_ROLES = { "ALERT_ADMIN" };
+    private static final String[] VALID_DB_ROLES = { "ALERT_USER" };
     private UserManagementAuthoritiesPopulator authoritiesPopulator;
 
     @BeforeEach
     public void initializeAuthoritiesPopulator() throws Exception {
+        Set<UserRoleModel> roles = Arrays.stream(VALID_DB_ROLES)
+                                       .map(roleName -> UserRoleModel.of(roleName))
+                                       .collect(Collectors.toSet());
+        UserModel userModel = UserModel.newUser(USER_NAME, "password", EMAIL, AuthenticationType.SAML, roles, true);
         AuthenticationDescriptorKey key = new AuthenticationDescriptorKey();
         ConfigurationAccessor configurationAccessor = Mockito.mock(ConfigurationAccessor.class);
         ConfigurationModel configuration = Mockito.mock(ConfigurationModel.class);
         UserAccessor userAccessor = Mockito.mock(UserAccessor.class);
         Mockito.when(configuration.getField(Mockito.anyString())).thenReturn(Optional.empty());
         Mockito.when(configurationAccessor.getConfigurationsByDescriptorKey(Mockito.eq(key))).thenReturn(List.of(configuration));
-        Mockito.when(userAccessor.getUser(Mockito.anyString())).thenReturn(Optional.empty());
+        Mockito.when(userAccessor.getUser(Mockito.anyString())).thenReturn(Optional.of(userModel));
         authoritiesPopulator = new UserManagementAuthoritiesPopulator(key, configurationAccessor, userAccessor);
     }
 
@@ -61,9 +71,11 @@ public class UserDetailsServiceTest {
         UserPrincipal principal = (UserPrincipal) result;
         assertEquals(USER_NAME, principal.getUsername());
         assertTrue(StringUtils.isBlank(principal.getPassword()));
-        assertEquals(VALID_ROLES.length, principal.getAuthorities().size());
-        List<String> expectedRoles = List.of(VALID_ROLES);
-        List<String> actualRoles = principal.getAuthorities().stream().map(GrantedAuthority::getAuthority).map(authority -> StringUtils.remove(authority, UserModel.ROLE_PREFIX)).collect(Collectors.toList());
+        assertEquals(VALID_ROLES.length + VALID_DB_ROLES.length, principal.getAuthorities().size());
+        List<String> expectedRoles = new ArrayList<>();
+        expectedRoles.addAll(Arrays.asList(VALID_ROLES));
+        expectedRoles.addAll(Arrays.asList(VALID_DB_ROLES));
+        List<String> actualRoles = extractRoleNamesFromPrincipal(principal);
         assertTrue(expectedRoles.containsAll(actualRoles));
     }
 
@@ -86,7 +98,10 @@ public class UserDetailsServiceTest {
         UserPrincipal principal = (UserPrincipal) result;
         assertEquals(USER_NAME, principal.getUsername());
         assertTrue(StringUtils.isBlank(principal.getPassword()));
-        assertTrue(principal.getAuthorities().isEmpty());
+        assertEquals(VALID_DB_ROLES.length, principal.getAuthorities().size());
+        List<String> expectedRoles = Arrays.asList(VALID_DB_ROLES);
+        List<String> actualRoles = extractRoleNamesFromPrincipal(principal);
+        assertTrue(expectedRoles.containsAll(actualRoles));
     }
 
     @Test
@@ -108,6 +123,16 @@ public class UserDetailsServiceTest {
         UserPrincipal principal = (UserPrincipal) result;
         assertEquals(USER_NAME, principal.getUsername());
         assertTrue(StringUtils.isBlank(principal.getPassword()));
-        assertTrue(principal.getAuthorities().isEmpty());
+        assertEquals(VALID_DB_ROLES.length, principal.getAuthorities().size());
+        List<String> expectedRoles = Arrays.asList(VALID_DB_ROLES);
+        List<String> actualRoles = extractRoleNamesFromPrincipal(principal);
+        assertTrue(expectedRoles.containsAll(actualRoles));
+    }
+
+    private List<String> extractRoleNamesFromPrincipal(UserPrincipal principal) {
+        return principal.getAuthorities().stream()
+                   .map(GrantedAuthority::getAuthority)
+                   .map(authority -> StringUtils.remove(authority, UserModel.ROLE_PREFIX))
+                   .collect(Collectors.toList());
     }
 }
